scripts/nullaway/annotator/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8.txt
../annotator/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/Caramel.java:40: error: [NullAway] dereferenced expression caramelType is @Nullable
        result = 31 * result + caramelType.hashCode();
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/LollipopBuilder.java:32: error: [NullAway] passing @Nullable parameter 'getFlavor()' where @NonNull is required
                getFlavor());
                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/ChocolateBuilder.java:11: error: [NullAway] initializer method does not guarantee @NonNull fields chocolateType (line 8), stuffingType (line 9) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ChocolateBuilder(int protein, int fat, int carbohydrate,
           ^
    (see http://t.uber.com/nullaway )
3 errors
